--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^4.0.0
   cloud_firestore: ^6.0.0
   provider: ^6.1.5+1
+  table_calendar: ^3.2.0
 
 dev_dependencies:
   flutter_test:
